{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 109,
  "lineage": "5e16a156-62d6-d667-c513-acfe3fb33306",
  "resources": [
    {
      "mode": "data",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "kubernetes.io/metadata.name": "argocd",
                  "name": "argocd"
                },
                "name": "argocd",
                "resource_version": "93429",
                "uid": "2d5b155d-c0c5-4163-982a-cc28c8e5585d"
              }
            ],
            "spec": [
              {
                "finalizers": [
                  "kubernetes"
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "kubernetes_service",
      "name": "nginx_ingress_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx/nginx-ingress-ingress-nginx-controller",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "nginx-ingress",
                  "meta.helm.sh/release-namespace": "ingress-nginx"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "ingress-nginx",
                  "app.kubernetes.io/part-of": "ingress-nginx",
                  "app.kubernetes.io/version": "1.10.0",
                  "helm.sh/chart": "ingress-nginx-4.10.0"
                },
                "name": "nginx-ingress-ingress-nginx-controller",
                "namespace": "ingress-nginx",
                "resource_version": "227383",
                "uid": "a8538d78-3b78-408f-a963-864740ee4510"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.97.163.129",
                "cluster_ips": [
                  "10.97.163.129"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "app_protocol": "http",
                    "name": "http",
                    "node_port": 31197,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "http"
                  },
                  {
                    "app_protocol": "https",
                    "name": "https",
                    "node_port": 32599,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "https"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress",
                  "app.kubernetes.io/name": "ingress-nginx"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "aa8538d783b78408fa963864740ee451-11068811f15c45ae.elb.eu-central-1.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "control_plane_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01490a9320a7c6267",
            "arn": "arn:aws:ec2:eu-central-1:194722402459:elastic-ip/eipalloc-01490a9320a7c6267",
            "association_id": "eipassoc-09306eaaac3b048ab",
            "domain": "vpc",
            "id": "eipalloc-01490a9320a7c6267",
            "instance": "i-03a525da10c85bbc2",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0c43ba8c8b670d129",
            "private_dns": "ip-10-0-1-194.eu-central-1.compute.internal",
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-3-70-153-3.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.153.3",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "k8s-control-plane-eip",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "k8s-control-plane-eip",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.control_plane",
            "aws_security_group.kube_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "worker_node_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08331ac78f388b910",
            "arn": "arn:aws:ec2:eu-central-1:194722402459:elastic-ip/eipalloc-08331ac78f388b910",
            "association_id": "eipassoc-018eee8712c604b46",
            "domain": "vpc",
            "id": "eipalloc-08331ac78f388b910",
            "instance": "i-02234df71f94c2c14",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0761a9f4eb2a3a29b",
            "private_dns": "ip-10-0-1-205.eu-central-1.compute.internal",
            "private_ip": "10.0.1.205",
            "public_dns": "ec2-3-78-135-194.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.135.194",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "k8s-worker-1-eip",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "k8s-worker-1-eip",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.worker_nodes",
            "aws_security_group.kube_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "worker_node_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e829b7fc1a24992",
            "arn": "arn:aws:ec2:eu-central-1:194722402459:elastic-ip/eipalloc-03e829b7fc1a24992",
            "association_id": "eipassoc-051301c5950770451",
            "domain": "vpc",
            "id": "eipalloc-03e829b7fc1a24992",
            "instance": "i-078abae314c25a287",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-041c8fee4eac586ff",
            "private_dns": "ip-10-0-1-242.eu-central-1.compute.internal",
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-18-159-11-15.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.11.15",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "k8s-worker-2-eip",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "k8s-worker-2-eip",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.worker_nodes",
            "aws_security_group.kube_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0dc33c9c954b3f073",
            "arn": "arn:aws:ec2:eu-central-1:194722402459:instance/i-03a525da10c85bbc2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "AWSCloudControllerManagerRole",
            "id": "i-03a525da10c85bbc2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "smart-home-k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c43ba8c8b670d129",
            "private_dns": "ip-10-0-1-194.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-3-70-153-3.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.153.3",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "k8s-control-plane-root",
                  "kubernetes.io/cluster/smart-home": "owned",
                  "terraform": "true"
                },
                "tags_all": {
                  "Name": "k8s-control-plane-root",
                  "kubernetes.io/cluster/smart-home": "owned",
                  "terraform": "true"
                },
                "throughput": 0,
                "volume_id": "vol-000141cec09411d13",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05349ceadb33b1090",
            "tags": {
              "Name": "k8s-control-plane",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "k8s-control-plane",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb2ee6af0898944a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.kube_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0dc33c9c954b3f073",
            "arn": "arn:aws:ec2:eu-central-1:194722402459:instance/i-02234df71f94c2c14",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "AWSCloudControllerManagerRole",
            "id": "i-02234df71f94c2c14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "smart-home-k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0761a9f4eb2a3a29b",
            "private_dns": "ip-10-0-1-205.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.205",
            "public_dns": "ec2-3-78-135-194.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.135.194",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "k8s-worker-1-root"
                },
                "tags_all": {
                  "Name": "k8s-worker-1-root"
                },
                "throughput": 0,
                "volume_id": "vol-0eefa024c00d24b26",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05349ceadb33b1090",
            "tags": {
              "Name": "k8s-worker-1",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "k8s-worker-1",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb2ee6af0898944a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.kube_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0dc33c9c954b3f073",
            "arn": "arn:aws:ec2:eu-central-1:194722402459:instance/i-078abae314c25a287",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "AWSCloudControllerManagerRole",
            "id": "i-078abae314c25a287",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "smart-home-k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041c8fee4eac586ff",
            "private_dns": "ip-10-0-1-242.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-18-159-11-15.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.11.15",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "k8s-worker-2-root"
                },
                "tags_all": {
                  "Name": "k8s-worker-2-root"
                },
                "throughput": 0,
                "volume_id": "vol-0a81df9d0f944c555",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05349ceadb33b1090",
            "tags": {
              "Name": "k8s-worker-2",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "k8s-worker-2",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb2ee6af0898944a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.kube_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:194722402459:internet-gateway/igw-022fae11458169639",
            "id": "igw-022fae11458169639",
            "owner_id": "194722402459",
            "region": "eu-central-1",
            "tags": {
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "vpc_id": "vpc-0071f0aa184749162"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:194722402459:loadbalancer/net/k8s-nlb/252c494b0b0d70f6",
            "arn_suffix": "net/k8s-nlb/252c494b0b0d70f6",
            "dns_name": "k8s-nlb-252c494b0b0d70f6.elb.eu-central-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:194722402459:loadbalancer/net/k8s-nlb/252c494b0b0d70f6",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "k8s-nlb",
            "region": "eu-central-1",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05349ceadb33b1090"
              }
            ],
            "subnets": [
              "subnet-05349ceadb33b1090"
            ],
            "tags": {
              "Name": "k8s-nlb",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "k8s-nlb",
              "terraform": "true"
            },
            "vpc_id": "vpc-0071f0aa184749162",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:194722402459:loadbalancer/net/k8s-nlb/252c494b0b0d70f6"
          },
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:194722402459:route-table/rtb-05ff2d8ff75bd2c79",
            "id": "rtb-05ff2d8ff75bd2c79",
            "owner_id": "194722402459",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022fae11458169639",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0071f0aa184749162"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049f204c393a5858c",
            "region": "eu-central-1",
            "route_table_id": "rtb-05ff2d8ff75bd2c79",
            "subnet_id": "subnet-05349ceadb33b1090"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kube_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:194722402459:security-group/sg-0cb2ee6af0898944a",
            "description": "Allow Kubernetes ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb2ee6af0898944a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Flannel VXLAN traffic between nodes",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "kube-sg",
            "name_prefix": "",
            "owner_id": "194722402459",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0071f0aa184749162"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:194722402459:subnet/subnet-05349ceadb33b1090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05349ceadb33b1090",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722402459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "kube-subnet",
              "kubernetes.io/cluster/smart-home": "owned",
              "kubernetes.io/role/elb": "1",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "kube-subnet",
              "kubernetes.io/cluster/smart-home": "owned",
              "kubernetes.io/role/elb": "1",
              "terraform": "true"
            },
            "vpc_id": "vpc-0071f0aa184749162"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:194722402459:vpc/vpc-0071f0aa184749162",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ad32083c826ecfc",
            "default_route_table_id": "rtb-003a375ff63ef0d2b",
            "default_security_group_id": "sg-0d1707f0cd3a37858",
            "dhcp_options_id": "dopt-051a1828c1a9605f4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0071f0aa184749162",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003a375ff63ef0d2b",
            "owner_id": "194722402459",
            "region": "eu-central-1",
            "tags": {
              "Name": "kube-vpc",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "kube-vpc",
              "kubernetes.io/cluster/smart-home": "owned",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-nginx",
                "resource_version": "27935",
                "uid": "21f9677c-c0f5-4243-a8f8-75927ec7cd43"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "ingress-nginx"
          }
        }
      ]
    }
  ]
}